2003-08-05  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (DEF-C-VAR, DEF-CALL-OUT): do not call NOTE-C-VAR
	and NOTE-C-FUN for dynamic objects

2003-08-04  Sam Steingold  <sds@gnu.org>

	extended dynamic object loading from AMIGAOS to WIN32_NATIVE & POSIX
	* m4/dynload.m4 (CL_DYNLOAD): use AC_SEARCH_LIBS
	* constobj.d (foreign_libraries): define
	* constsym.d, subr.d (foreign_library, foreign_library_variable)
	(foreign_library_function): added
	* foreign.d (FOREIGN-LIBRARY, FOREIGN-LIBRARY-VARIABLE):
	(FOREIGN-LIBRARY-FUNCTION): extended to win32 & posix
	* foreign1.lisp (def-c-var, def-call-out): added :LIBRARY option
	* makemake.in (LIBDL): absorbed into LIBS
	* unix.d (dlopen, dlsym, dlclose, dlerror): removed prototypes

2003-08-02  Wolfgang Jenkner <wjenkner@inode.at>
	    Sam Steingold  <sds@gnu.org>

	* condition.lisp (assert): fixed bug a whereby two adjacent
	ASSERTs would redefine ASSERT-RESTART-PROMPT and thus use the
	same closure when in fact they are prompting for different places

2003-08-02  Sam Steingold  <sds@gnu.org>

	use system-wide regex implementation when it is available
	* modules/regexp/regexi.c: include <regex.h>, not "regex.h"
	* modules/regexp/link.sh.in: renamed from link.sh
	* modules/regexp/configure.in: AC_SUBST REGEX_O&REGEX_H
	* modules/regexp/Makefile.in: use REGEX_O&REGEX_H

2003-08-02  Sam Steingold  <sds@gnu.org>

	* modules/wildcard/wildcard.lisp: #include <fnmatch.h>
	* modules/regexp/regexp.lisp (*output-c-functions*)
	(*output-c-variables*): set to T

2003-08-02  Sam Steingold  <sds@gnu.org>

	* unixconf.h.in: generated by autoheader now
	* c++-bool.m4, cc-char-unsigned.m4, cc-elif.m4, cc-error.m4:
	* cc-mergestrings.m4, chdir.m4, chmod.m4, endian.m4, execl.m4:
	* execv.m4, fcntl.m4, fsync.m4, ftime.m4, getenv.m4, getpwnam.m4:
	* getpwuid.m4, localtime.m4, memset.m4, mkdir.m4, opendir.m4:
	* rename.m4, rmdir.m4, setitimer.m4, setlocale.m4, strerror.m4:
	* strlen.m4, structtm.m4, sys_errlist.m4, ualarm.m4, unistd.m4: